# case_study

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
case_study/: main.py  models.py  test_run.py
case_study/agents/: entity_extractor.py  final_answer_structurer.py
case_study/graphs/: irac.py
case_study/llms/: grader.py  ollama.py  openai.py
case_study/rag/: rag.py  vector_store.py
case_study/rag/from_scratch/: loader.py
case_study/rag/langchain/: contracts_rag.py  loader.py  rules_rag.py  rules_splitter.py  splitter.py  vector_store.py
case_study/tools/: retriever.py
case_study/ui/: app.py  astream_events_handler.py  graph.py  local_app.py  runner.py  text_formatter.py
case_study/utils/: files.py  llm.py
data/: contracts_metadata.json  contracts_vector_store.json
data/contracts/: lease1.txt  lease10.txt  lease11.txt  lease12.txt  lease13.txt  lease14.txt  lease2.txt  lease3.txt  lease4.txt  lease5.txt  lease6.txt  lease7.txt  lease8.txt  lease9.txt
data/docs/: sample_contract.txt
data/rules/: internal_tc.txt
data/rules_chroma_langchain_db/94547251-124d-4b15-8e0d-e8e4041663e5/: index_metadata.pickle
