[tool.poetry]
name = "contract-lease-review"
version = "0.1.0"
description = ""
authors = ["melissa <melissarhonamarquez@gmail.com>"]
packages = [{ include = "case_study" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.3"
openai = "^1.75.0"
tqdm = "^4.66.4"
tiktoken = "^0.7.0"
nltk = "^3.8.1"
pydantic-settings = "^2.3.3"
groq = "^0.22.0"
nomic = { extras = ["local"], version = "^3.4.1" }
litellm = "^1.67.0"
langgraph = "^0.3.31"
langchain-nomic = { extras = ["local"], version = "^0.1.4" }
langchain-community = "^0.3.21"
langchain = "^0.3.23"
langchain-ollama = "^0.3.2"
scikit-learn = "^1.6.1"
bs4 = "^0.0.2"
streamlit = "^1.44.1"
langchain-openai = "^0.3.14"
chromadb = "0.6.3"
langchain-chroma = "^0.2.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
poethepoet = "^0.33.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
load-docs = "case_study.rag.loader:main"
rag = "case_study.rag.rag:main"
irac = "case_study.main:main"
load-rules = "case_study.rag.langchain.loader:load_rules"

[tool.poe.tasks.get_nltk_data]
help = "Download corpora data for nltk"
imports = ["nltk"]
assert = true
expr = """(
    nltk.download('punkt_tab')
)"""
